--- a/Machine_Learning_Training/2_Deploy_to_container.ipynb
+++ b/Machine_Learning_Training/2_Deploy_to_container.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "3775908f-ca36-4846-8f38-5adca39217f2",
    "metadata": {
     "language": "python",
@@ -29,6 +29,7 @@
     "from snowflake.ml.registry import Registry\n",
     "from snowflake.snowpark import Session\n",
     "from snowflake.snowpark.context import get_active_session\n",
+    "import streamlit as st\n",
     "from xgboost import XGBClassifier\n",
     "\n",
     "from common import get_next_model_version\n",
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "9739eb3e-d3d6-4fbe-bcf3-1bd0f2d8b6a5",
    "metadata": {
     "language": "python",
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "5e5cb48f-dfb5-4173-aab8-df210f461d1b",
    "metadata": {
     "language": "python",
@@ -312,7 +313,7 @@
        "4       149160.225503                 1  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "id": "948c12c6-189c-4bec-88ec-51ed228359c6",
    "metadata": {
     "language": "python",
@@ -1498,7 +1499,7 @@
        "                         'min_child_weight': [1, 6], 'n_estimators': [100]})"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1532,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "id": "f4b6b44a-848e-4801-a050-6fefbb1b5a31",
    "metadata": {
     "language": "python",
@@ -1612,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "id": "c7f92b91-8f36-4054-8928-34367257f165",
    "metadata": {
     "language": "python",
@@ -1623,8 +1624,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "V_2\n",
-      "Model logged successfully.: 100%|██████████| 6/6 [00:10<00:00,  1.83s/it]                          \n"
+      "V_4\n",
+      "Model logged successfully.: 100%|██████████| 6/6 [00:10<00:00,  1.80s/it]                          \n"
      ]
     }
    ],
@@ -1648,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "id": "5625aa2b-06ad-4d90-bff7-e3694a76dba8",
    "metadata": {
     "language": "python",
@@ -1670,7 +1671,7 @@
        "            <div>MORTGAGE_LENDING_MLOPS</div>\n",
        "        \n",
        "            <div style=\"font-weight: bold;\">Version:</div>\n",
-       "            <div><strong style=\"color: #28a745;\">V_1</strong></div>\n",
+       "            <div><strong style=\"color: #28a745;\">V_3</strong></div>\n",
        "        \n",
        "            <div style=\"font-weight: bold;\">Full Name:</div>\n",
        "            <div>DEMO.PUBLIC.MORTGAGE_LENDING_MLOPS</div>\n",
@@ -2008,11 +2009,11 @@
       "text/plain": [
        "ModelVersion(\n",
        "  name='MORTGAGE_LENDING_MLOPS',\n",
-       "  version='V_1',\n",
+       "  version='V_3',\n",
        ")"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2026,7 +2027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "id": "934d7d47-87a8-4929-b4da-8fa16a0e4460",
    "metadata": {
     "language": "python",
@@ -2048,7 +2049,7 @@
        "            <div>MORTGAGE_LENDING_MLOPS</div>\n",
        "        \n",
        "            <div style=\"font-weight: bold;\">Version:</div>\n",
-       "            <div><strong style=\"color: #28a745;\">V_2</strong></div>\n",
+       "            <div><strong style=\"color: #28a745;\">V_4</strong></div>\n",
        "        \n",
        "            <div style=\"font-weight: bold;\">Full Name:</div>\n",
        "            <div>DEMO.PUBLIC.MORTGAGE_LENDING_MLOPS</div>\n",
@@ -2353,11 +2354,11 @@
       "text/plain": [
        "ModelVersion(\n",
        "  name='MORTGAGE_LENDING_MLOPS',\n",
-       "  version='V_2',\n",
+       "  version='V_4',\n",
        ")"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2370,7 +2371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "id": "c5840d87-d7d2-465b-bb24-888ccf2e6b2d",
    "metadata": {
     "language": "python",
@@ -2383,7 +2384,7 @@
        "[Row(status='MORTGAGE_INFERENCE already exists, statement succeeded.')]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2401,7 +2402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 26,
    "id": "cde241e1-43b4-47c3-844e-4787e3de03c1",
    "metadata": {
     "language": "python",
@@ -2418,7 +2419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 27,
    "id": "1c45de1e-2946-4629-bc87-5b3a6a2a304c",
    "metadata": {
     "language": "python",
@@ -2429,9 +2430,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "create_service logs saved to: /Users/cromano/Library/Logs/snowflake-ml/model_deploy_463a3302_1764822749.log        \n",
-      "To see logs in console, set log level to INFO: logging.getLogger().setLevel(logging.INFO)                     \n",
-      "Model service created successfully: 100%|██████████| 6/6 [05:46<00:00, 57.68s/it]                             \n"
+      "create_service logs saved to: /Users/cromano/Library/Logs/snowflake-ml/model_deploy_ac5c74e0_1764825245.log        \n",
+      "To see logs in console, set log level to INFO: logging.getLogger().setLevel(logging.INFO)                  \n",
+      "Creating model inference service: deploying model service...: 100%|██████████| 6/6 [00:00<00:00,  9.32it/s]\n",
+      "Service already created\n"
      ]
     }
    ],
@@ -2449,7 +2451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 28,
    "id": "3d3feba7-92ab-451e-99af-fe25412e71be",
    "metadata": {
     "language": "python",
@@ -2462,7 +2464,7 @@
        "[Row(name='MORTGAGE_LENDING_PREDICTION_SERVICE', status='RUNNING', database_name='DEMO', schema_name='PUBLIC', owner='SYSADMIN', compute_pool='MORTGAGE_INFERENCE', dns_name='mortgage-lending-prediction-service.hvfr.svc.spcs.internal', current_instances=2, target_instances=2, min_ready_instances=2, min_instances=2, max_instances=2, auto_resume='true', external_access_integrations=None, created_on=datetime.datetime(2025, 12, 3, 20, 35, 59, 469000, tzinfo=<DstTzInfo 'America/Los_Angeles' PST-1 day, 16:00:00 STD>), updated_on=datetime.datetime(2025, 12, 3, 20, 36, 1, 455000, tzinfo=<DstTzInfo 'America/Los_Angeles' PST-1 day, 16:00:00 STD>), resumed_on=None, suspended_on=None, auto_suspend_secs=1800, comment=None, owner_role_type='ROLE', query_warehouse=None, is_job='false', is_async_job='false', spec_digest='6edfe87aca75025117b9fa3d4998f6d5e5a00b4ba2f5c3555a1817f72b61f052', is_upgrading='false', managing_object_domain='Model', managing_object_name='DEMO.PUBLIC.MORTGAGE_LENDING_MLOPS')]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2477,7 +2479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 29,
    "id": "ad51e490",
    "metadata": {},
    "outputs": [
@@ -2487,7 +2489,7 @@
        "[Row(status='Statement executed successfully.')]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2502,7 +2504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 30,
    "id": "5538aabf-c54a-46af-b150-cfe6ed14a6b3",
    "metadata": {
     "language": "python",
@@ -2560,7 +2562,7 @@
        "0  bjc46pfe-sfsenorthamerica-cromano.snowflakecom...  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2571,7 +2573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 31,
    "id": "7f055dd5-64cb-4d09-b953-bc31162ab946",
    "metadata": {
     "language": "python",
@@ -2642,7 +2644,7 @@
        "4        0.337418          0.662582"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2666,7 +2668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 32,
    "id": "c535c36c-d685-4a18-8b65-6d75c7ab13d6",
    "metadata": {
     "language": "python",
@@ -2696,7 +2698,7 @@
        "   0]]}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2711,7 +2713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 33,
    "id": "f97e6cd7-8cb1-4281-b506-4fe27a6b0dd7",
    "metadata": {
     "language": "python",
@@ -2739,7 +2741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 34,
    "id": "eda67072-7a79-42f6-b88c-3d2d04bf43a8",
    "metadata": {
     "codeCollapsed": false,
@@ -2950,7 +2952,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mortgage-model",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
