--- a/Machine_Learning_Training/4_Remote_ml_jobs.ipynb
+++ b/Machine_Learning_Training/4_Remote_ml_jobs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3775908f-ca36-4846-8f38-5adca39217f2",
    "metadata": {
     "language": "python",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "id": "4b61ba03",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9739eb3e-d3d6-4fbe-bcf3-1bd0f2d8b6a5",
    "metadata": {
     "language": "python",
@@ -113,18 +113,25 @@
      "text": [
       "Reading table data...\n",
       "   LOAN_ID                       TS LOAN_TYPE_NAME LOAN_PURPOSE_NAME  \\\n",
-      "0   460124  2024-05-24 07:20:38.400  VA-guaranteed     Home purchase   \n",
-      "1   444931  2024-09-11 20:43:52.320    FHA-insured     Home purchase   \n",
-      "2   456257  2024-03-13 20:36:23.040    FHA-insured     Home purchase   \n",
-      "3   313469  2024-06-30 10:03:47.520   Conventional     Home purchase   \n",
-      "4   266947  2024-07-29 14:08:26.880   Conventional       Refinancing   \n",
+      "0   225846  2024-08-09 23:51:21.600  VA-guaranteed       Refinancing   \n",
+      "1   298793  2024-02-15 10:42:48.960  VA-guaranteed       Refinancing   \n",
+      "2   456295  2024-05-17 06:29:48.480   Conventional     Home purchase   \n",
+      "3   376334  2024-06-21 11:55:14.880    FHA-insured       Refinancing   \n",
+      "4   216409  2024-10-03 17:14:38.400   Conventional       Refinancing   \n",
       "\n",
-      "   APPLICANT_INCOME_000S  LOAN_AMOUNT_000S       COUNTY_NAME  MORTGAGERESPONSE  \n",
-      "0                    NaN               196  Jefferson County                 1  \n",
-      "1                   22.0                65       Erie County                 1  \n",
-      "2                    NaN               147       Erie County                 1  \n",
-      "3                   44.0                90     Oswego County                 1  \n",
-      "4                    NaN               271     Orange County                 1  \n"
+      "   APPLICANT_INCOME_000S  LOAN_AMOUNT_000S         COUNTY_NAME  \\\n",
+      "0                    NaN               160         Erie County   \n",
+      "1                  109.0               255         Erie County   \n",
+      "2                  283.0               392  Westchester County   \n",
+      "3                   43.0               173       Albany County   \n",
+      "4                  209.0               255        Kings County   \n",
+      "\n",
+      "   MORTGAGERESPONSE  \n",
+      "0                 1  \n",
+      "1                 1  \n",
+      "2                 1  \n",
+      "3                 0  \n",
+      "4                 1  \n"
      ]
     }
    ],
@@ -145,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "id": "5e5cb48f-dfb5-4173-aab8-df210f461d1b",
    "metadata": {
     "language": "python",
@@ -156,8 +163,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original shape: (1107735, 8)\n",
-      "Cleaned shape: (1107735, 20)\n",
+      "Original shape: (369245, 8)\n",
+      "Cleaned shape: (369245, 20)\n",
       "\n",
       "Min TIMESTAMP: 2025-01-04 00:00:00\n",
       "Max TIMESTAMP: 2025-12-02 07:40:13.440000\n",
@@ -211,108 +218,108 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>460124</td>\n",
-       "      <td>2024-05-24 07:20:38.400</td>\n",
+       "      <td>225846</td>\n",
+       "      <td>2024-08-09 23:51:21.600</td>\n",
        "      <td>VA-guaranteed</td>\n",
-       "      <td>Home purchase</td>\n",
+       "      <td>Refinancing</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>196</td>\n",
-       "      <td>Jefferson County</td>\n",
+       "      <td>160</td>\n",
+       "      <td>Erie County</td>\n",
        "      <td>1</td>\n",
-       "      <td>2025-05-28 07:20:38.400</td>\n",
-       "      <td>5</td>\n",
-       "      <td>148</td>\n",
+       "      <td>2025-08-13 23:51:21.600</td>\n",
+       "      <td>8</td>\n",
+       "      <td>225</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>196000</td>\n",
+       "      <td>160000</td>\n",
        "      <td>88000.0</td>\n",
-       "      <td>0.448980</td>\n",
-       "      <td>81839.215686</td>\n",
+       "      <td>0.550000</td>\n",
+       "      <td>81930.629669</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>444931</td>\n",
-       "      <td>2024-09-11 20:43:52.320</td>\n",
-       "      <td>FHA-insured</td>\n",
-       "      <td>Home purchase</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>65</td>\n",
+       "      <td>298793</td>\n",
+       "      <td>2024-02-15 10:42:48.960</td>\n",
+       "      <td>VA-guaranteed</td>\n",
+       "      <td>Refinancing</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>255</td>\n",
        "      <td>Erie County</td>\n",
        "      <td>1</td>\n",
-       "      <td>2025-09-15 20:43:52.320</td>\n",
-       "      <td>9</td>\n",
-       "      <td>258</td>\n",
+       "      <td>2025-02-18 10:42:48.960</td>\n",
+       "      <td>2</td>\n",
+       "      <td>49</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>65000</td>\n",
-       "      <td>22000.0</td>\n",
-       "      <td>0.338462</td>\n",
+       "      <td>255000</td>\n",
+       "      <td>109000.0</td>\n",
+       "      <td>0.427451</td>\n",
        "      <td>81930.629669</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>456257</td>\n",
-       "      <td>2024-03-13 20:36:23.040</td>\n",
-       "      <td>FHA-insured</td>\n",
+       "      <td>456295</td>\n",
+       "      <td>2024-05-17 06:29:48.480</td>\n",
+       "      <td>Conventional</td>\n",
        "      <td>Home purchase</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>147</td>\n",
-       "      <td>Erie County</td>\n",
+       "      <td>283.0</td>\n",
+       "      <td>392</td>\n",
+       "      <td>Westchester County</td>\n",
        "      <td>1</td>\n",
-       "      <td>2025-03-17 20:36:23.040</td>\n",
-       "      <td>3</td>\n",
-       "      <td>76</td>\n",
+       "      <td>2025-05-21 06:29:48.480</td>\n",
+       "      <td>5</td>\n",
+       "      <td>141</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
+       "      <td>392000</td>\n",
+       "      <td>283000.0</td>\n",
+       "      <td>0.721939</td>\n",
+       "      <td>180657.260909</td>\n",
        "      <td>1</td>\n",
-       "      <td>147000</td>\n",
-       "      <td>88000.0</td>\n",
-       "      <td>0.598639</td>\n",
-       "      <td>81930.629669</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>313469</td>\n",
-       "      <td>2024-06-30 10:03:47.520</td>\n",
-       "      <td>Conventional</td>\n",
-       "      <td>Home purchase</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>90</td>\n",
-       "      <td>Oswego County</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2025-07-04 10:03:47.520</td>\n",
-       "      <td>7</td>\n",
-       "      <td>185</td>\n",
-       "      <td>4</td>\n",
+       "      <td>376334</td>\n",
+       "      <td>2024-06-21 11:55:14.880</td>\n",
+       "      <td>FHA-insured</td>\n",
+       "      <td>Refinancing</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>173</td>\n",
+       "      <td>Albany County</td>\n",
        "      <td>0</td>\n",
-       "      <td>90000</td>\n",
-       "      <td>44000.0</td>\n",
-       "      <td>0.488889</td>\n",
-       "      <td>70994.971716</td>\n",
+       "      <td>2025-06-25 11:55:14.880</td>\n",
+       "      <td>6</td>\n",
+       "      <td>176</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>173000</td>\n",
+       "      <td>43000.0</td>\n",
+       "      <td>0.248555</td>\n",
+       "      <td>95647.051459</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>266947</td>\n",
-       "      <td>2024-07-29 14:08:26.880</td>\n",
+       "      <td>216409</td>\n",
+       "      <td>2024-10-03 17:14:38.400</td>\n",
        "      <td>Conventional</td>\n",
        "      <td>Refinancing</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>271</td>\n",
-       "      <td>Orange County</td>\n",
+       "      <td>209.0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Kings County</td>\n",
        "      <td>1</td>\n",
-       "      <td>2025-08-02 14:08:26.880</td>\n",
-       "      <td>8</td>\n",
-       "      <td>214</td>\n",
-       "      <td>5</td>\n",
+       "      <td>2025-10-07 17:14:38.400</td>\n",
+       "      <td>10</td>\n",
+       "      <td>280</td>\n",
        "      <td>1</td>\n",
-       "      <td>271000</td>\n",
-       "      <td>88000.0</td>\n",
-       "      <td>0.324723</td>\n",
-       "      <td>106242.587601</td>\n",
        "      <td>0</td>\n",
+       "      <td>255000</td>\n",
+       "      <td>209000.0</td>\n",
+       "      <td>0.819608</td>\n",
+       "      <td>149160.225503</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -320,42 +327,42 @@
       ],
       "text/plain": [
        "   LOAN_ID                      TS LOAN_TYPE_NAME LOAN_PURPOSE_NAME  \\\n",
-       "0   460124 2024-05-24 07:20:38.400  VA-guaranteed     Home purchase   \n",
-       "1   444931 2024-09-11 20:43:52.320    FHA-insured     Home purchase   \n",
-       "2   456257 2024-03-13 20:36:23.040    FHA-insured     Home purchase   \n",
-       "3   313469 2024-06-30 10:03:47.520   Conventional     Home purchase   \n",
-       "4   266947 2024-07-29 14:08:26.880   Conventional       Refinancing   \n",
+       "0   225846 2024-08-09 23:51:21.600  VA-guaranteed       Refinancing   \n",
+       "1   298793 2024-02-15 10:42:48.960  VA-guaranteed       Refinancing   \n",
+       "2   456295 2024-05-17 06:29:48.480   Conventional     Home purchase   \n",
+       "3   376334 2024-06-21 11:55:14.880    FHA-insured       Refinancing   \n",
+       "4   216409 2024-10-03 17:14:38.400   Conventional       Refinancing   \n",
        "\n",
-       "   APPLICANT_INCOME_000S  LOAN_AMOUNT_000S       COUNTY_NAME  \\\n",
-       "0                    NaN               196  Jefferson County   \n",
-       "1                   22.0                65       Erie County   \n",
-       "2                    NaN               147       Erie County   \n",
-       "3                   44.0                90     Oswego County   \n",
-       "4                    NaN               271     Orange County   \n",
+       "   APPLICANT_INCOME_000S  LOAN_AMOUNT_000S         COUNTY_NAME  \\\n",
+       "0                    NaN               160         Erie County   \n",
+       "1                  109.0               255         Erie County   \n",
+       "2                  283.0               392  Westchester County   \n",
+       "3                   43.0               173       Albany County   \n",
+       "4                  209.0               255        Kings County   \n",
        "\n",
        "   MORTGAGERESPONSE               TIMESTAMP  MONTH  DAY_OF_YEAR  DOTW  \\\n",
-       "0                 1 2025-05-28 07:20:38.400      5          148     2   \n",
-       "1                 1 2025-09-15 20:43:52.320      9          258     0   \n",
-       "2                 1 2025-03-17 20:36:23.040      3           76     0   \n",
-       "3                 1 2025-07-04 10:03:47.520      7          185     4   \n",
-       "4                 1 2025-08-02 14:08:26.880      8          214     5   \n",
+       "0                 1 2025-08-13 23:51:21.600      8          225     2   \n",
+       "1                 1 2025-02-18 10:42:48.960      2           49     1   \n",
+       "2                 1 2025-05-21 06:29:48.480      5          141     2   \n",
+       "3                 0 2025-06-25 11:55:14.880      6          176     2   \n",
+       "4                 1 2025-10-07 17:14:38.400     10          280     1   \n",
        "\n",
-       "   MISSING_INCOME  LOAN_AMOUNT   INCOME  INCOME_LOAN_RATIO  \\\n",
-       "0               1       196000  88000.0           0.448980   \n",
-       "1               0        65000  22000.0           0.338462   \n",
-       "2               1       147000  88000.0           0.598639   \n",
-       "3               0        90000  44000.0           0.488889   \n",
-       "4               1       271000  88000.0           0.324723   \n",
+       "   MISSING_INCOME  LOAN_AMOUNT    INCOME  INCOME_LOAN_RATIO  \\\n",
+       "0               1       160000   88000.0           0.550000   \n",
+       "1               0       255000  109000.0           0.427451   \n",
+       "2               0       392000  283000.0           0.721939   \n",
+       "3               0       173000   43000.0           0.248555   \n",
+       "4               0       255000  209000.0           0.819608   \n",
        "\n",
        "   MEAN_COUNTY_INCOME  HIGH_INCOME_FLAG  \n",
-       "0        81839.215686                 0  \n",
-       "1        81930.629669                 0  \n",
-       "2        81930.629669                 0  \n",
-       "3        70994.971716                 0  \n",
-       "4       106242.587601                 0  "
+       "0        81930.629669                 0  \n",
+       "1        81930.629669                 1  \n",
+       "2       180657.260909                 1  \n",
+       "3        95647.051459                 0  \n",
+       "4       149160.225503                 1  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "id": "d2cd363e",
    "metadata": {},
    "outputs": [
@@ -440,7 +447,7 @@
        "[Row(status='ML_STAGE already exists, statement succeeded.')]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "id": "dc71ba50",
    "metadata": {},
    "outputs": [
@@ -463,7 +470,7 @@
        "[Row(status='MORTGAGE_LENDING_TRAIN already exists, statement succeeded.')]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "id": "3a8ed3c3",
    "metadata": {},
    "outputs": [],
@@ -587,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "id": "8e1ce71d",
    "metadata": {},
    "outputs": [
@@ -607,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "86e2cf6f",
    "metadata": {},
    "outputs": [
@@ -615,21 +622,21 @@
      "data": {
       "text/plain": [
        "{'status': 'Success',\n",
-       " 'metrics_test': {'Accuracy': 0.7289427992814177,\n",
-       "  'Precision': 0.8028133170302729,\n",
-       "  'Recall': 0.7289427992814177,\n",
-       "  'F1 Score': 0.7497830258440619,\n",
-       "  'best_cv_score': 0.7481390060866748,\n",
+       " 'metrics_test': {'Accuracy': 0.6993969704082186,\n",
+       "  'Precision': 0.7746879242238848,\n",
+       "  'Recall': 0.6993969704082186,\n",
+       "  'F1 Score': 0.7223588014091902,\n",
+       "  'best_cv_score': 0.7262809579279604,\n",
        "  'best_params': \"{'colsample_bytree': 1.0, 'gamma': 0, 'learning_rate': 0.3, 'max_depth': 7, 'min_child_weight': 1, 'n_estimators': 200, 'subsample': 1.0}\"},\n",
-       " 'metrics_train': {'Accuracy': 0.7448846680611906,\n",
-       "  'Precision': 0.8169109318640024,\n",
-       "  'Recall': 0.7448846680611906,\n",
-       "  'F1 Score': 0.7644469108059416,\n",
-       "  'best_cv_score': 0.7481390060866748,\n",
+       " 'metrics_train': {'Accuracy': 0.7513957078356953,\n",
+       "  'Precision': 0.8215894479145842,\n",
+       "  'Recall': 0.7513957078356953,\n",
+       "  'F1 Score': 0.7703184110417596,\n",
+       "  'best_cv_score': 0.7262809579279604,\n",
        "  'best_params': \"{'colsample_bytree': 1.0, 'gamma': 0, 'learning_rate': 0.3, 'max_depth': 7, 'min_child_weight': 1, 'n_estimators': 200, 'subsample': 1.0}\"}}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,33 +644,11 @@
    "source": [
     "result"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "456c7deb",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'snowflake.ml.modeling.distributors'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[34], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msnowflake\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mml\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodeling\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdistributors\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mxgboost\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m XGBEstimator, XGBScalingConfig\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'snowflake.ml.modeling.distributors'"
-     ]
-    }
-   ],
-   "source": [
-    "\n"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mortgage-model",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
