--- a/Image_Matching/Image matching and extraction notebook.ipynb
+++ b/Image_Matching/Image matching and extraction notebook.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "\n",
     "# Upload the files to the stage using Snowpark\n",
-    "MY_STAGE = 'EXAMPLE_DOCS/images'\n",
+    "MY_STAGE = 'EXAMPLE_ITEMS/images'\n",
     "MY_FILE_NAME = \"images/*\"\n",
     "\n",
     "put_result = session.file.put(MY_FILE_NAME, MY_STAGE, auto_compress=False,overwrite=True)\n"
