Enhance image matching notebook by adding relative paths for images in SQL query

--- a/Image_Matching/Image matching and extraction notebook.ipynb
+++ b/Image_Matching/Image matching and extraction notebook.ipynb
@@ -140,7 +140,9 @@
     ")\n",
     "SELECT\n",
     "self1.img AS image_1,\n",
+    "self1.relative_path as image_1_path,\n",
     "self2.img AS image_2,\n",
+    "self2.relative_path as image_2_path,\n",
     "-- Semantic similarity score. Using 'voyage-multimodal-3' model\n",
     "AI_SIMILARITY(self1.img, self2.img) AS sim_score,\n",
     "FROM  pictures self1\n",
